[package]
name = "fh-lox"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = { version = "0.20", features = ["unicode", "lexer"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
logos = "0.13.0"
phf = { version = "0.11.2", features = ["macros"] }
pretty_assertions = "1.3.0"
thiserror = "1.0.40"
